# pybasisu

./: LICENSE.txt  README.md  ThirdPartyNotices.md  azure-pipelines.yml  pyproject.toml
pybasisu/: __init__.py  cli.py
pybasisu/binaries/: commit.txt
pybasisu/binaries/Linux32/: basisu
pybasisu/binaries/Linux64/: basisu
pybasisu/binaries/macOS/: basisu
tests/: test_pybasisu.py
